--- a/WebApi/ClientApp/public/index.html
+++ b/WebApi/ClientApp/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
     <base href="%PUBLIC_URL%/" />
@@ -23,6 +23,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+    />
+
     <title>Peak for today</title>
   </head>
   <body>
